--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
@@ -25,5 +25,11 @@
     "sass-loader": "^6.0.3",
     "webpack": "^3",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0-beta.2",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
+    "style-loader": "^0.19.1"
   }
 }
